users 500 and tybe bugs fixed
